Fix spacing on on-tap list

--- a/web/themes/custom/mirrortwin/scss/modules/node/beer/_on-tap.scss
+++ b/web/themes/custom/mirrortwin/scss/modules/node/beer/_on-tap.scss
@@ -11,6 +11,7 @@
   @include breakpoint(medium up) {
     flex-direction: row;
     justify-content: center;
+    margin-bottom: rvr(0.5);
   }
 
   &__label {
